Bug 446512 - Recent nightlies of Lightning cause NULL-pointer dereference crash in TB; r=philipp